--- a/src/app/_pages/users/users.component.html
+++ b/src/app/_pages/users/users.component.html
@@ -1,1 +1,61 @@
-<p>users works!</p>
+<div class="container mt-5">
+    <div class="d-flex justify-content-center row" [formGroup]="userForm">
+        <div class="col-md-2">
+            <label for="">First Name</label>
+            <input type="text" formControlName="firstName">
+        </div>
+        <div class="col-md-2">
+            <label for="">Last Name</label>
+            <input type="text" formControlName="lastName">
+        </div>
+        <div class="col-md-2">
+            <label for="">Age</label>
+            <input type="text" formControlName="age">
+        </div>
+        <div class="col-md-2">
+            <label for="">Gender</label>
+            <input type="text" formControlName="gender">
+        </div>
+        <div class="col-md-2">
+            <label for="">email</label>
+            <input type="text" formControlName="email">
+        </div>
+
+    </div>
+    <div class="d-flex justify-content-center row mt-1">
+        <div class="col-md-5">
+            <button class="btn btn-primary" (click)="addUser()">Add User</button>
+        </div>
+    </div>
+</div>
+<div class="container mt-5">
+    <div class="d-flex justify-content-center row">
+        <div class="col-md-12">
+            <div class="rounded">
+                <div class="table-responsive table-borderless">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>First Name</th>
+                                <th>Last Name</th>
+                                <th>Age</th>
+                                <th>Gender</th>
+                                <th>Email</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody class="table-body" *ngFor="let user of users$ | async">
+                            <tr class="cell-1" data-toggle="collapse">
+                                <td>{{user.firstName}}</td>
+                                <td>{{user.lastName}}</td>
+                                <td>{{user.age}}</td>
+                                <td>{{user.gender}}</td>
+                                <td>{{user.email}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
