--- a/src/app/_pages/users/users.component.html
+++ b/src/app/_pages/users/users.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 p-10">
     <div class="d-flex justify-content-center row" [formGroup]="userForm">
         <div class="col-md-2">
             <label for="">First Name</label>
