--- a/src/app/_pages/users/users.component.html
+++ b/src/app/_pages/users/users.component.html
@@ -44,13 +44,14 @@
                                 <th></th>
                             </tr>
                         </thead>
-                        <tbody class="table-body" *ngFor="let user of users$ | async">
+                        <tbody class="table-body" *ngFor="let user of users$ | async; let _index=index">
                             <tr class="cell-1" data-toggle="collapse">
                                 <td>{{user.firstName}}</td>
                                 <td>{{user.lastName}}</td>
                                 <td>{{user.age}}</td>
                                 <td>{{user.gender}}</td>
                                 <td>{{user.email}}</td>
+                                <td><button class="btn btn-primary">Edit</button> <button class="btn btn-primary" (click)="deleteUser(user)">delet</button></td>
                             </tr>
                         </tbody>
                     </table>
