--- a/src/app/_pages/users/users.component.html
+++ b/src/app/_pages/users/users.component.html
@@ -41,7 +41,7 @@
                                 <th>Age</th>
                                 <th>Gender</th>
                                 <th>Email</th>
-                                <th></th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody class="table-body" *ngFor="let user of users$ | async; let _index=index">
@@ -51,7 +51,8 @@
                                 <td>{{user.age}}</td>
                                 <td>{{user.gender}}</td>
                                 <td>{{user.email}}</td>
-                                <td><button class="btn btn-primary">Edit</button> <button class="btn btn-primary" (click)="deleteUser(user)">delet</button></td>
+                                <td><button class="btn btn-primary mr-5" (click)="editUser(user)">Edit</button> 
+                                    <button class="btn btn-primary" (click)="deleteUser(user)">delet</button></td>
                             </tr>
                         </tbody>
                     </table>
