--- a/src/app/_pages/users/users.component.html
+++ b/src/app/_pages/users/users.component.html
@@ -1,4 +1,9 @@
 <div class="container mt-5 p-10">
+    <div class="d-flex justify-content-center row">
+        <div class="col-md-3">
+            <h1>User Management</h1>
+        </div>
+    </div>
     <div class="d-flex justify-content-center row" [formGroup]="userForm">
         <div class="col-md-2">
             <label for="">First Name</label>
@@ -24,7 +29,7 @@
     </div>
     <div class="d-flex justify-content-center row mt-1">
         <div class="col-md-5">
-            <button class="btn btn-primary" (click)="addUser()">Add User</button>
+            <button class="btn btn-primary" (click)="addUser()">Save</button>
         </div>
     </div>
 </div>
@@ -51,8 +56,9 @@
                                 <td>{{user.age}}</td>
                                 <td>{{user.gender}}</td>
                                 <td>{{user.email}}</td>
-                                <td><button class="btn btn-primary mr-5" (click)="editUser(user)">Edit</button> 
-                                    <button class="btn btn-primary" (click)="deleteUser(user)">delet</button></td>
+                                <td><button class="btn btn-primary mr-5" (click)="editUser(user)">Edit</button>
+                                    <button class="btn btn-primary" (click)="deleteUser(user)">delet</button>
+                                </td>
                             </tr>
                         </tbody>
                     </table>
